# voquill

./: .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  TODO.md  app.go  build.js  build.sh  cross_platform_ptt.md  deno.json  dev.js  go.mod  go.sum  hotkey_windows.go  index.html  main.go  package-lock.json  package.json  session-ses_39f3.md  tsconfig.node.json  vite.config.ts  voquill.desktop  wails.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD.md  CNAME  JEKYLL.md  LOCAL_WHISPER_INTEGRATION_PLAN.md  PORTAL_COMPATIBILITY.md  RELEASE.md  TODO.md  VERSION_UPDATE.md  WINDOWS_AUDIO_HANDOVER.md  _config.yml  background.html  donate.html  index.html  robots.txt  screenshots.html  sitemap.xml
docs/_includes/: index-json-ld.html  site-footer.html  site-head.html
docs/_layouts/: default.html
docs/assets/: base.css  donate.css  index.css  screenshots.css
docs/release-notes/: v1.3.0.md  v1.3.1.md  v1.3.10.md  v1.3.9.md
flatpak/: README.md  com.voquill.voquill.desktop  com.voquill.voquill.metainfo.xml  com.voquill.voquill.yml
frontend/: index.html  package-lock.json  package.json.md5  tailwind.config.js
frontend/src/: App.svelte  style.css
frontend/wailsjs/go/main/: App.d.ts  App.js
go/: DESIGN.md  app.go  go.mod  hotkey_linux.go  hotkey_windows.go  keyboard.go  main.go  wails.json
go/frontend/: package.json  package.json.md5
go/frontend/src/: App.svelte  style.css
go/scripts/: record_audio_windows.ps1
go/src/: icon.go
packaging/linux/: README.md  install.sh  uninstall.sh  voquill.desktop.template
python/: main.py
reference-systems/tauri-app/src-tauri/: tauri.conf.json
rust/: Cargo.toml  README.md  tauri.conf.json
rust/src/: audio.rs  config.rs  history.rs  hotkey.rs  main.rs  transcription.rs  typing.rs
rust/ui/: package.json
rust/ui/src/: App.css  App.tsx  Overlay.css  Overlay.tsx  StatusIcon.tsx
scripts/: build.js  build.ts  check-deps.mjs  deps.ts  dev.ts  record_audio_windows.ps1  tauri-runner.mjs
src/: App.css  App.tsx  Cargo.toml  Cargo.txt  LOCAL_WHISPER_INTEGRATION_PLAN.md  Overlay.css  Overlay.tsx  StatusIcon.css  StatusIcon.tsx  audio.go  config.go  core.go  design-tokens.ts  go.sum  gui.go  history.go  index.css  keyboard.go  main.go  main.tsx  tauri.conf.json  transcription.go  types.go  variables.css
src-tauri/: Cargo.toml  org.voquill.foss.metainfo.xml  tauri.conf.json  tauri.linux.conf.json  voquill-dev-wrapper.sh
src-tauri/capabilities/: main.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/packaging/: org.voquill.foss.desktop.hbs
src-tauri/permissions/: app.toml  autogenerated.toml
src-tauri/src/: audio.rs  config.rs  history.rs  hotkey.rs  local_whisper.rs  main.rs  model_manager.rs  permissions.rs  transcription.rs  typing.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  recording_flow.rs  session_log.rs  state.rs  status.rs
src-tauri/src/app/commands/: config.rs  diagnostics.rs  hotkey.rs  mod.rs  platform.rs  recording.rs  transcription.rs  update.rs
src-tauri/src/platform/: mod.rs  permissions.rs  traits.rs
src-tauri/src/platform/linux/: detection.rs  mod.rs
src-tauri/src/platform/linux/wayland/: env.rs  input.rs  mod.rs  overlay.rs  permissions.rs  shortcuts.rs
src-tauri/src/platform/linux/wayland/portal/: capabilities.rs  global_shortcuts.rs  mod.rs  types.rs
src-tauri/src/platform/linux/x11/: input.rs  mod.rs  overlay.rs  permissions.rs  shortcuts.rs
src-tauri/src/platform/windows/: input.rs  mod.rs  overlay.rs  permissions.rs  shortcuts.rs
src/components/: ActionFooter.tsx  Button.tsx  Card.tsx  CollapsibleSection.tsx  ConfigField.tsx  MicSetupPanel.tsx  Modal.tsx  ModeSwitcher.tsx  ModelInfoModal.tsx  ModelSelectionPanel.tsx  NumberField.tsx  SelectField.tsx  SettingRow.tsx  SliderField.tsx  SurfaceCard.tsx  Switch.tsx
src/pages/: ConfigPage.tsx  HistoryPage.tsx  InitialSetupPage.tsx  StatusPage.tsx  UiLabPage.tsx
src/permissions/: main.toml
src/src/: audio.rs  config.rs  hotkey.rs  main.rs  transcription.rs  typing.rs
src/theme/: component-styles.ts  ui-primitives.ts
src/ui/: deno.json  package.json
src/ui/src/: App.css  App.tsx  index.css  main.tsx  variables.css
